[gd_scene load_steps=17 format=3 uid="uid://ddc68q5qsle12"]

[ext_resource type="Texture2D" uid="uid://dmv4jck05yagb" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Idle00.png" id="1_4wqa7"]
[ext_resource type="Texture2D" uid="uid://depkuuxuyn7wf" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Chase00.png" id="1_7pi66"]
[ext_resource type="Script" path="res://enemy_02.gd" id="1_ca7bx"]
[ext_resource type="Texture2D" uid="uid://bhppibhc8xqfs" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Chase01.png" id="2_bdf6l"]
[ext_resource type="Texture2D" uid="uid://bvsv1ynp16gba" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Idle01.png" id="2_egvv2"]
[ext_resource type="Texture2D" uid="uid://b1qlt8wdq6ocj" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Chase02.png" id="3_fn8xc"]
[ext_resource type="Texture2D" uid="uid://b5gbtneimeygo" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Idle02.png" id="3_t5a5y"]
[ext_resource type="Texture2D" uid="uid://lhgyep4bfokv" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Chase03.png" id="4_v8imb"]
[ext_resource type="Texture2D" uid="uid://bxifw5uyoxhiv" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Notice00.png" id="8_58j38"]
[ext_resource type="Texture2D" uid="uid://dta37snhl2m2d" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Notice01.png" id="9_qfnti"]
[ext_resource type="Texture2D" uid="uid://l3vneoc3m1ja" path="res://FirstTryProjectArtSprites/FTPEnemies/Enemy02/Enemy02Notice02.png" id="10_u4qh5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ged8g"]
radius = 12.0416

[sub_resource type="SpriteFrames" id="SpriteFrames_2arje"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("1_7pi66")
}, {
"duration": 0.5,
"texture": ExtResource("2_bdf6l")
}, {
"duration": 0.5,
"texture": ExtResource("3_fn8xc")
}, {
"duration": 0.5,
"texture": ExtResource("4_v8imb")
}, {
"duration": 0.5,
"texture": ExtResource("3_fn8xc")
}, {
"duration": 0.5,
"texture": ExtResource("2_bdf6l")
}, {
"duration": 2.0,
"texture": ExtResource("1_7pi66")
}],
"loop": true,
"name": &"Chase",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("1_4wqa7")
}, {
"duration": 1.0,
"texture": ExtResource("2_egvv2")
}, {
"duration": 2.0,
"texture": ExtResource("3_t5a5y")
}, {
"duration": 1.0,
"texture": ExtResource("2_egvv2")
}, {
"duration": 2.0,
"texture": ExtResource("1_4wqa7")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_58j38")
}, {
"duration": 1.0,
"texture": ExtResource("9_qfnti")
}, {
"duration": 1.0,
"texture": ExtResource("10_u4qh5")
}],
"loop": false,
"name": &"Notice",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dcy7n"]
radius = 128.191

[sub_resource type="CircleShape2D" id="CircleShape2D_qsm1p"]
radius = 112.058

[sub_resource type="CircleShape2D" id="CircleShape2D_vt71a"]
radius = 13.0

[node name="Enemy02" type="CharacterBody2D"]
script = ExtResource("1_ca7bx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ged8g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_2arje")
animation = &"Idle"

[node name="PlayerNotice" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNotice"]
shape = SubResource("CircleShape2D_dcy7n")

[node name="PlayerChase" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerChase"]
shape = SubResource("CircleShape2D_qsm1p")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
shape = SubResource("CircleShape2D_vt71a")

[connection signal="body_entered" from="PlayerNotice" to="." method="_on_player_notice_body_entered"]
[connection signal="body_exited" from="PlayerNotice" to="." method="_on_player_notice_body_exited"]
[connection signal="body_entered" from="PlayerChase" to="." method="_on_player_chase_body_entered"]
[connection signal="body_exited" from="PlayerChase" to="." method="_on_player_chase_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
